--- a/source/layouts/html5.haml
+++ b/source/layouts/html5.haml
@@ -29,27 +29,12 @@ metas: "main"
     %link{ rel: "icon", type: "image/ico", href: "favicon.ico" }
 
 
-
-    / Bootstrap style
-    %link{:href => "css/bootstrap.min.css", :media => "screen", :rel => "stylesheet"}/
-    / Font Awesome Style
-    %link{:href => "css/font-awesome.min.css", :media => "screen", :rel => "stylesheet"}/
-    / Animate Style
-    %link{:href => "css/animate.css", :media => "screen", :rel => "stylesheet"}/
     / Layer slider
     %link{:href => "layerslider/css/layerslider.css", :media => "screen", :rel => "stylesheet"}/
-    / Flexslider Style
-    %link{:href => "css/flexslider.css", :media => "screen", :rel => "stylesheet"}/
-    / Youtube player
-    %link{:href => "css/YTPlayer.css ", :media => "screen", :rel => "stylesheet"}/
-    / Lightbox
-    %link{:href => "css/magnific-popup.css", :media => "screen", :rel => "stylesheet"}/
+    
     / Style css
-    %link{:href => "css/style.css", :media => "screen", :rel => "stylesheet"}/
-    / Components css
-    %link{:href => "css/components.css", :media => "screen", :rel => "stylesheet"}/
-    / Responsive css
-    %link{:href => "css/responsive.css", :media => "screen", :rel => "stylesheet"}/
+    = stylesheet_link_tag "style"
+
     / Google Fonts
     %link{:href => "http://fonts.googleapis.com/css?family=Montserrat:400,700", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300&amp;subset=latin,cyrillic-ext,cyrillic,greek-ext,greek,vietnamese", :rel => "stylesheet", :type => "text/css"}/
