--- a/source/localizable/index.html.haml
+++ b/source/localizable/index.html.haml
@@ -1,7 +1,8 @@
-= partial "partials/header"
+= partial "partials/header-parallax"
 = partial "partials/home"
-= partial "partials/services"
 = partial "partials/about"
-= partial "partials/job"
+= partial "partials/service-gallery"
+= partial "partials/services"
+= partial "partials/parallax"
 = partial "partials/showcase"
 = partial "partials/footer"
