--- a/source/partials/_header-parallax.haml
+++ b/source/partials/_header-parallax.haml
@@ -1,6 +1,6 @@
 %header#header
   / parallax home
-  #parallax-home.parallax{:style => "background-image:url(img/slider-main/3.jpg);"}
+  #parallax-home.parallax{:style => "background-image:url(img/slider-main/header.png);"}
     .container
       .row
         .col-md-12
@@ -9,35 +9,13 @@
               %li
                 / 1st slide
                 .parallax-text-container-home
-                  .parallax-text-item
-                    %h1.white WE ARE OVNI
+                  .parallax-text-item#logo
+                    %h1.white NUBILOOM
                     / Text
                     %p
-                      Maturity and depth: with his second album, Mobthrow refines his very original mixture of beat-driven breaks and
-                      %br/
-                      highly evocative atmospheres, enriching them with a subtle newfound palette.
+                      Provides complex cloud and webapp architectural solutions
               / 1st slide end
-              %li
-                / 2nd slide
-                .parallax-text-container-home
-                  .parallax-text-item
-                    %h1.white MINIMALISTIC
-                    / Text
-                    %p
-                      Maturity and depth: with his second album, Mobthrow refines his very original mixture of beat-driven breaks and
-                      %br/
-                      highly evocative atmospheres, enriching them with a subtle newfound palette.
-              / 2nd slide end
-              %li
-                / 3rd slide
-                .parallax-text-container-home
-                  .parallax-text-item
-                    %h1.white STRONG CODE
-                    / Text
-                    %p
-                      Maturity and depth: with his second album, Mobthrow refines his very original mixture of beat-driven breaks and
-                      %br/
-                      highly evocative atmospheres, enriching them with a subtle newfound palette.
+              
               / 3rd slide end
           / Slider ends
         / col-md-12 ends
@@ -55,92 +33,17 @@
           %li
             %a{:href => "#home", :title => "Home"} Home
           %li
-            %a{:href => "#services", :title => "Services"} Services
+            %a{:href => "#services", :title => "Services"} Advantages
           %li
-            %a{:href => "#about", :title => "About"} About
+            %a{:href => "#about", :title => "About"} Offer
           %li
-            %a{:href => "#team", :title => "Team"} Team
+            %a{:href => "#team", :title => "Team"} Technologies
           %li
-            %a{:href => "#job", :title => "Job"} Job
+            %a{:href => "#job", :title => "Job"} Clients 
           %li
-            %a{:href => "#portfolio", :title => "Portfolio"} Portfolio
-          %li
-            %a{:href => "#showcase", :title => "Showcase"} Showcase
+            %a{:href => "#showcase", :title => "Showcase"} News
           %li
             %a{:href => "#contact", :title => "Contact"} Contact
         %select.select-menu
         / select menu for small screens
   / Nav ends
-%section#home
-  .container
-    .row
-      .col-md-12.text-center
-        %h2.section-title latest projects
-    .row.spacer40
-    .row
-      .col-md-8.col-md-offset-2
-        %p.lead Fusce in tellus posuere, ullamcorper massa ut, posuere dolor. Aliquam sit amet adipiscing magna. Cras vitae tellus eget turpis tincidunt mattis. In tincidunt ante nisi. Donec non tortor lectus. Aliquam fringilla consectetur eleifend. Donec id elementum eros.
-    .row.spacer80
-    .row
-      .col-md-12
-        .projects-slider
-          .row
-            %ul.slides
-              %li
-                .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    %img{:alt => "", :src => "img/slider-projects/1.jpg"}/
-                  .slider-text
-                    %h3 Interier Desing Trends
-                    %p It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially.
-                .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    %img{:alt => "", :src => "img/slider-projects/2.jpg"}/
-                  .slider-text
-                    %h3 Interier Desing Trends
-                    %p It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially.
-                .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    %img{:alt => "", :src => "img/slider-projects/3.jpg"}/
-                  .slider-text
-                    %h3 Interier Desing Trends
-                    %p It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially.
-              %li
-                .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    %img{:alt => "", :src => "img/slider-projects/4.jpg"}/
-                  .slider-text
-                    %h3 Interier Desing Trends
-                    %p It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially.
-                .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    %img{:alt => "", :src => "img/slider-projects/5.jpg"}/
-                  .slider-text
-                    %h3 Interier Desing Trends
-                    %p It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially.
-                .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    %img{:alt => "", :src => "img/slider-projects/6.jpg"}/
-                  .slider-text
-                    %h3 Interier Desing Trends
-                    %p It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially.
-              %li
-                .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    %img{:alt => "", :src => "img/slider-projects/7.jpg"}/
-                  .slider-text
-                    %h3 Interier Desing Trends
-                    %p It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially.
-                .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    %img{:alt => "", :src => "img/slider-projects/8.jpg"}/
-                  .slider-text
-                    %h3 Interier Desing Trends
-                    %p It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially.
-                .col-xs-4.col-sm-4.col-md-4.slider-content
-                  %a{:href => "#"}
-                    %img{:alt => "", :src => "img/slider-projects/9.jpg"}/
-                  .slider-text
-                    %h3 Interier Desing Trends
-                    %p It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially.
-  .spacer40
