--- a/source/partials/_parallax.haml
+++ b/source/partials/_parallax.haml
@@ -1,11 +1,8 @@
-#parallax-two.parallax{:style => "background-image:url(img/parallax/2.png);"}
+#parallax-two.parallax{:style => "background-image:url(img/parallax/back2.png);"}
   .parallax-text-container-2
     .parallax-text-item
       .container
         .row
-          .col-md-12
-            %h2.section-title-white Parallax
-        .row.spacer40
-        .row
           .col-md-8.col-md-offset-2
-            %p.lead Fusce in tellus posuere, ullamcorper massa ut, posuere dolor. Aliquam sit amet adipiscing magna. Cras vitae tellus eget turpis tincidunt mattis. In tincidunt ante nisi.
+            %p "What the new technology does is create new opportunities to do a job that customers want done."
+            %p "Tim O'Reilly"
