--- a/source/partials/_about.haml
+++ b/source/partials/_about.haml
@@ -6,7 +6,7 @@
     .row.spacer40
     .row
       .col-md-8.col-sm-8
-        %img{:alt => "", "data-ani" => "animated", "data-type" => "fadeIn", :src => "img/mockup/1.png"}/
+        %img{:alt => "", "data-ani" => "animated", "data-type" => "fadeIn", :src => "img/mockup/nubiloom_visual_cloud.png"}/
       .col-md-4.col-sm-4
         %h3 
           Achieve economies of scale 
