--- a/source/partials/_services.haml
+++ b/source/partials/_services.haml
@@ -14,7 +14,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/ec2.svg"
+              = image_tag "icons/ec2.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 EC2 Instances
           .services-2-text
             %p Elastic Cloud Compute (EC2) provides the core of Amazon's scalable computing offering. With complete control over your virtual computing environment, EC2 lets you create and boot new server instances in minutes, scaling dynamically to handle fluctuations in demand.
@@ -22,7 +22,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/rds.svg"
+              = image_tag "icons/rds.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 RDS Databases
           .services-2-text
             %p RDS provides Relational Database Services for your application. RDS also handles automatic database backups with user-defined retention periods, reducing the time a DBA spends doing database maintenance tasks.
@@ -30,7 +30,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/ddb.svg"
+              = image_tag "icons/ddb.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 No-SQL Databses
           .services-2-text
             %p Amazon DynamoDB is a fully managed NoSQL database service that provides extremely fast and predictable performance with seamless scalability. Amazon SimpleDB provides a non-relational service designed for smaller datasets. Or we can run your own NoSQL databases on Amazon EC2 and Amazon EBS with full control over your database.
@@ -39,7 +39,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/cf.svg"
+              = image_tag "icons/cf.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 Cloudformation Templating
           .services-2-text
             %p CloudFormation makes creating and managing stacks (collections of AWS resources) simple. Resource dependencies are automatically handled for you, which makes deployment more predictable and less stressful.
@@ -47,7 +47,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/iam.svg"
+              = image_tag "icons/iam.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 IAM Access Security
           .services-2-text
             %p The Identity and Access Management (IAM) capabilities of AWS give you secure access control for both users and integrated systems. Integration with existing identity federation systems eliminates duplication when granting and revoking access.
@@ -55,7 +55,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/sqs.svg"
+              = image_tag "icons/sqs.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 SQS Message Queuing
           .services-2-text
             %p Queueing and delivering messages between servers requires a high degree of scalability and reliability. Amazon SQS is a hosted service which gives AWS developers an easy-to-integrate solution to this problem.
@@ -64,7 +64,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/s3.svg"
+              = image_tag "icons/s3.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 S3 Storage
           .services-2-text
             %p Amazon's S3 provides scalable storage in the cloud for your application's data. Using S3 eliminates the issues associated with anticipating user/system data and trying to purchase hardware accordingly. With S3, you have access to exactly the amount of storage space you need at all times.
@@ -72,7 +72,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/ec.svg"
+              = image_tag "icons/ec.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 Cache and CDN
           .services-2-text
             %p ElastiCache automatically detects and replaces failed nodes, reducing the overhead associated with self-managed infrastructures and provides a resilient system that mitigates the risk of overloaded databases, which slow website and application load times. 
@@ -80,7 +80,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/ebs.svg"
+              = image_tag "icons/ebs.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 EBS Load Balancing
           .services-2-text
             %p Elastic Load Balancing (ELB) gives AWS developers a way to automatically distribute incoming traffic to multiple EC2 instances which helps with fault tolerance, application performance, and even multi-zone deployments.
@@ -89,7 +89,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/route53.svg"
+              = image_tag "icons/route53.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 DNS Route 53
           .services-2-text
             %p Route 53 effectively connects user requests to infrastructure running in AWS and can also be used to route users to infrastructure outside of AWS. You can use Amazon Route 53 to configure DNS health checks to route traffic to healthy endpoints or to independently monitor the health of your application and its endpoints.
@@ -97,7 +97,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/cw.svg"
+              = image_tag "icons/cw.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 Cloudwatch monitoring
           .services-2-text
             %p Cloudwatch provides customizable monitors and alerts, allowing your application to react automatically to pre-defined critical events like CPU over-utilization.
@@ -105,7 +105,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/lambda.svg"
+              = image_tag "icons/lambda.svg", "data-ani"=> "animated", "data-type" => "fadeIn"
             %h4 Lambda
           .services-2-text
             %p A compute service that runs your code in response to events and automatically manages the compute resources for you, making it easy to build applications that respond quickly to new information.
@@ -114,7 +114,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/ses.svg"
+              = image_tag "icons/ses.svg", "data-ani"=> "animated", "data-type" => "fadeIn"
             %h4 Transactional emails
           .services-2-text
             %p With Amazon SES,Simple Email Service, you can send transactional email, marketing messages, or any other type of high-quality content and you only pay for what you use.
@@ -122,7 +122,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/opw.svg"
+              = image_tag "icons/opw.svg", "data-ani"=> "animated", "data-type" => "fadeIn"
             %h4 Continuous Deployment
           .services-2-text
             %p Techniques such as automated testing, continuous integration and continuous deployment allow software to be developed to a high standard and easily packaged and deployed to test environments with minimal manual overhead.
@@ -130,7 +130,7 @@
         .services-2
           .services-2-icon
             %i
-              = image_tag "icons/node.svg"
+              = image_tag "icons/node.svg", "data-ani"=> "animated", "data-type"=> "fadeIn"
             %h4 Node development
           .services-2-text
             %p Node.js operates on a single thread, using non-blocking I/O calls, allowing it to support tens of thousands of concurrent connections, without worrying about the cost of context-switching between threads. 
