--- a/source/partials/_header-parallax.haml
+++ b/source/partials/_header-parallax.haml
@@ -14,8 +14,11 @@
                     / Text
                     %p
                       Provides complex cloud and webapp architectural solutions
-              / 1st slide end
-              
+          %p.ls-l{"data-ls" => "durationin:2000;showuntil:8000;fadein:true;fadeout:true;scalexin:1.5;scaleyin:1.5;", :style => "top:60%;left:50%;"}
+            %a.down{:href => "#home"}
+              %i.fa.fa-angle-down
+                / 1st slide end
+                
               / 3rd slide end
           / Slider ends
         / col-md-12 ends
