--- a/source/css/style.sass
+++ b/source/css/style.sass
@@ -14,6 +14,10 @@ $blue-chill: #45999C
 $portorico: #5BBDA7
 $colonial-white: #F2E4BD
 
+p.ls-l
+  position: absolute
+  left: 48%
+  bottom: 10%
 #logo
   visibility: hidden
 
@@ -937,7 +941,7 @@ img
 
 .down
   display: inline-block
-  background: #282A2E
+  border: 1px solid $teal-blue
   width: 60px
   height: 60px
   line-height: 60px
@@ -947,11 +951,11 @@ img
   cursor: pointer
   text-align: center
   &:hover
-    background: #98A0A8
+    border: 1px solid $portorico
   i
     position: relative
     display: inline-block
-    color: #fff
+    color: $valencia
     font-size: 30px !important
     width: 60px
     height: 60px
